fixed up some edge cases